<resources>
    <string name="app_name">NaprawPollubMobile</string>
    <string name="username">Login</string>
    <string name="password">Hasło</string>
    <string name="sign_in">Zaloguj się</string>
    <string name="register">Rejestracja</string>
    <string name="full_name">Imię i nazwisko</string>
    <string name="confirm_password">Potwierdź hasło</string>
    <string name="already_having_account">Masz już konto?</string>
    <string name="log_in">Zaloguj się</string>
    <string name="not_having_account">Nie masz konta?</string>
    <string name="sign_up">Zarejestruj się</string>
    <string name="logout">Wyloguj się</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="email">E-mail</string>
    <string name="place">Wybierz miejsce usterki</string>
    <string name="type">Wybierz typ usterki</string>
    <string name="ip">192.168.1.116</string>
    <string name="read_file">Aplikacja wymaga dostępu do pamięci wewnętrzenj</string>
    <string name="read_map">Aplikacja wymaga dostępu do lokalizacji</string>
    <string name="title_activity_marker_map">Map</string>
</resources>
